# hermes-agents

financial-services/: README.md  hermes_tools.json  system_prompt.md
financial-services/config/: hermes_agent.yaml
financial-services/examples/: comps_input.json  dcf_input.json  earnings_input.json  kyc_input.json  meeting_input.json  reconcile_input.json
financial-services/financial_services_agent/: __init__.py  cli.py  tools.py
financial-services/skills/: comps_analysis.md  dcf_model.md  earnings_review.md  gl_reconciliation.md  kyc_screening.md  meeting_prep.md
mcps/capacities/: .env.example  README.md  explore_post.py  pyproject.toml  test_create_content.py  test_save_to_capacities.py  test_v1_create.py
mcps/capacities/capacities_mcp/: client.py  config.py  server.py
mcps/capacities/config/: hermes-mcp.example.yaml
mcps/capacities/examples/: daily-note.md  lookup.json
mcps/capacities/tests/: test_client.py  test_server.py
mcps/eve-online-mcp/: .env.example  README.md  pyproject.toml
mcps/eve-online-mcp/config/: hermes-mcp.example.json
mcps/eve-online-mcp/eve_online_mcp/: __init__.py  client.py  constants.py  server.py
mcps/eve-online-mcp/eve_online_mcp/tools/: market.py  universe.py
mcps/eve-online-mcp/examples/: sample-prompts.md
mcps/eve-online-mcp/tests/: test_client.py  test_market.py
mcps/massive-forex-mcp/: .env.example  .gitignore  README.md  pyproject.toml
mcps/massive-forex-mcp/config/: hermes-mcp.example.json
mcps/massive-forex-mcp/examples/: sample-prompts.md
mcps/massive-forex-mcp/massive_forex_mcp/: __init__.py  config.py  models.py  server.py  utils.py
mcps/massive-forex-mcp/tests/: test_server.py
