[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "capacities-mcp"
version = "0.1.0"
description = "A local stdio MCP server for the Capacities REST API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp[cli]>=1.6.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1"
]

[project.scripts]
capacities-mcp = "capacities_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["capacities_mcp"]
