[project]
name = "eve-online-mcp"
version = "0.1.0"
description = "A public EVE Online ESI market data MCP server."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Holo Foundry" }]
dependencies = [
  "mcp[cli]>=1.0.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0"
]

[project.scripts]
eve-online-mcp = "eve_online_mcp.server:main"

[tool.setuptools.packages.find]
include = ["eve_online_mcp*"]
